Fix some more FontAwesome related things
  * remove some more "fa" classes where they didn't belong
  * use "fa-toggle-(on|off)" instead of circles where they were used
    to signify toggle actions
  * fix SD card icon being too high

Another follow-up to #1915

--- a/src/octoprint/static/less/octoprint.less
+++ b/src/octoprint/static/less/octoprint.less
@@ -1125,10 +1125,6 @@ textarea.block {
   display: inline-block !important;
 }
 
-a.dropdown-sd {
-  padding-top: 4px !important;
-}
-
 .center {
   float: none;
   margin-left: auto;
